Fixed tip's  visibility

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -207,6 +207,9 @@ sup{
   img {
     display: none;
   }
+  img.visible{
+    display: block;
+  }
   p,
   a,
   span {
